examples/errors/parsing/mixed.cn
sort Option(a) = { Some : a | None : () }

type OptionT(a) = { Some : a | None : () }

fun fromOpt : Option(Int) -> Int [spec] = {
    Some x -> x
  | None () -> 0
}

fun unwrap : OptionT(Int) -> Int [pure] = {
  o -> case o of {
    Some n -> n
  | None u -> 0
  }
}

fun makeOpt : Int -> OptionT(Int) [pure] = {
  x -> Some x : OptionT(Int)
}

main : () [impure] =
  let o = makeOpt 42;
  let v = unwrap o;
  let p = New[Int] v;
  let r = Get[Int] p;
  let u = Del[Int] p;
  ()
